--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Machine Learning Algorithms</title>
+    <title>Resume</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -23,16 +23,6 @@
             background-color: white;
             border-radius: 8px;
         }
-        .algo-list {
-            list-style-type: none;
-            padding: 0;
-        }
-        .algo-list li {
-            background-color: #e2e2e2;
-            margin: 10px 0;
-            padding: 10px;
-            border-radius: 4px;
-        }
         .footer {
             background-color: #333;
             color: white;
@@ -42,27 +32,35 @@
             width: 100%;
             bottom: 0;
         }
+        #word-cloud {
+            width: 100%;
+            height: 300px;
+            margin-bottom: 20px;
+        }
+        #bar-chart {
+            width: 100%;
+            height: 300px;
+        }
     </style>
 </head>
 <body>
     <div class="header">
-        <h1>Machine Learning Algorithms</h1>
+        <h1>Artem Frenk</h1>
+        <p>Data Scientist | Machine Learning Engineer | AI Engineer</p>
     </div>
     <div class="content">
-        <h2>Common Machine Learning Algorithms</h2>
-        <ul class="algo-list">
-            <li><strong>Linear Regression:</strong> A simple algorithm used for predictive analysis.</li>
-            <li><strong>Logistic Regression:</strong> Used for binary classification problems.</li>
-            <li><strong>Decision Trees:</strong> A non-parametric supervised learning method used for classification and regression.</li>
-            <li><strong>Support Vector Machines:</strong> A supervised learning model used for classification and regression analysis.</li>
-            <li><strong>Naive Bayes:</strong> A family of simple probabilistic classifiers based on Bayes' theorem.</li>
-            <li><strong>K-Nearest Neighbors:</strong> A simple, instance-based learning algorithm.</li>
-            <li><strong>Random Forest:</strong> An ensemble learning method for classification, regression, and other tasks.</li>
-            <li><strong>Neural Networks:</strong> A series of algorithms that attempt to recognize underlying relationships in a set of data through a process that mimics the way the human brain operates.</li>
-        </ul>
+        <h2>Skills Word Cloud</h2>
+        <div id="word-cloud"></div>
+        <h2>Technologies Proficiency</h2>
+        <canvas id="bar-chart"></canvas>
     </div>
     <div class="footer">
-        <p>&copy; 2024 Machine Learning Reference</p>
+        <p>&copy; Artem Frenk</p>
     </div>
+
+    <script src="https://d3js.org/d3.v5.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/d3-cloud@1.2.5/build/d3.layout.cloud.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
