--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     <div class="header">
         <h1>Artem Frenk</h1>
         <p>Data Scientist | Machine Learning Engineer | AI Engineer</p>
+        <a href="https://github.com/afrenkai"> My Github</a>
     </div>
     <div class="content">
         <h2>Skills Word Cloud</h2>
@@ -55,7 +56,7 @@
         <canvas id="bar-chart"></canvas>
     </div>
     <div class="footer">
-        <p>&copy; Artem Frenk</p>
+        <p>&copy; Artem Frenk, 2024</p>
     </div>
 
     <script src="https://d3js.org/d3.v5.min.js"></script>
