--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resume</title>
+    <title>Artem Frenk</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -47,7 +47,10 @@
     <div class="header">
         <h1>Artem Frenk</h1>
         <p>Data Scientist | Machine Learning Engineer | AI Engineer</p>
-        <a href="https://github.com/afrenkai"> My Github</a>
+        <a href="https://github.com/afrenkai" class = 'link'> My Github</a>
+            <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="GitHub" class="icon">
+            My Github
+        </a>
     </div>
     <div class="content">
         <h2>Skills Word Cloud</h2>
@@ -56,7 +59,7 @@
         <canvas id="bar-chart"></canvas>
     </div>
     <div class="footer">
-        <p>&copy; Artem Frenk, 2024</p>
+        <p>&copy; Artem Frenk 2024</p>
     </div>
 
     <script src="https://d3js.org/d3.v5.min.js"></script>
