--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div class="header">
         <h1>Artem Frenk</h1>
         <p>Data Scientist | Machine Learning Engineer | AI Engineer</p>
-        <a href="https://github.com/afrenkai" class = 'link'> My Github</a>
+        <a href="https://github.com/afrenkai" class = 'link'> 
             <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="GitHub" class="icon">
             My Github
         </a>
