--- a/index.html
+++ b/index.html
@@ -41,15 +41,30 @@
             width: 100%;
             height: 300px;
         }
+        .icon {
+            width: auto;
+            height: 1em;
+            vertical-align: middle;
+        }
+        .link {
+            display: inline-flex;
+            align-items: center;
+            margin-left: 10px;
+            color: white;
+            text-decoration: none;
+        }
+        .link img {
+            margin-right: 5px;
+        }
     </style>
 </head>
 <body>
     <div class="header">
         <h1>Artem Frenk</h1>
         <p>Data Scientist | Machine Learning Engineer | AI Engineer</p>
-        <a href="https://github.com/afrenkai" class = 'link'> 
+        <a href="https://github.com/afrenkai" class="link">
             <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="GitHub" class="icon">
-            My Github
+            My GitHub
         </a>
     </div>
     <div class="content">
