--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
             background-color: white;
             border-radius: 8px;
         }
+        .section {
+            margin-bottom: 40px;
+        }
         .footer {
             background-color: #333;
             color: white;
@@ -68,10 +71,26 @@
         </a>
     </div>
     <div class="content">
-        <h2>Skills Word Cloud</h2>
-        <div id="word-cloud"></div>
-        <h2>Technologies Proficiency</h2>
-        <canvas id="bar-chart"></canvas>
+        <div class="section" id="about-me">
+            <h2>About Me</h2>
+            <p>A brief introduction</p>
+        </div>
+        <div class="section" id="experience">
+            <h2>Experience</h2>
+            <p>Details about my work experience.</p>
+        </div>
+        <div class="section" id="classes-taken">
+            <h2>Classes Taken</h2>
+            <p>A list of relevant classes and courses completed by me.</p>
+        </div>
+        <div class="section" id="tech-stack">
+            <h2>Tech Stack</h2>
+            <canvas id="bar-chart"></canvas>
+        </div>
+        <div class="section" id="skills-word-cloud">
+            <h2>Skills Word Cloud</h2>
+            <div id="word-cloud"></div>
+        </div>
     </div>
     <div class="footer">
         <p>&copy; Artem Frenk 2024</p>
