--- a/index.html
+++ b/index.html
@@ -69,6 +69,10 @@
             <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="GitHub" class="icon">
             My GitHub
         </a>
+        <a href="https://www.linkedin.com/in/artem-frenk-281726236/" class="link">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/c/ca/LinkedIn_logo_initials.png" alt="LinkedIn" class="icon">
+            My LinkedIn
+        </a>
     </div>
     <div class="content">
         <div class="section" id="about-me">
