--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <body>
     <div class="header">
         <h1>Artem Frenk</h1>
-        <p>Data Scientist | Machine Learning Engineer | AI Engineer</p>
+        <p>Data Scientist | Machine Learning Engineer First, AI Engineer Second</p>
         <a href="https://github.com/afrenkai" class="link">
             <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="GitHub" class="icon">
             My GitHub
@@ -73,11 +73,18 @@
             <img src="https://upload.wikimedia.org/wikipedia/commons/c/ca/LinkedIn_logo_initials.png" alt="LinkedIn" class="icon">
             My LinkedIn
         </a>
+        <a href="mailto:afrenk.biz@gmail.com" class="link">
+            <img src = "https://commons.wikimedia.org/wiki/File:Gmail_icon_(2020).svg" alt = "gmail" class="icon">
+            Email Me
+        </a>
     </div>
     <div class="content">
         <div class="section" id="about-me">
             <h2>About Me</h2>
             <p>A brief introduction</p>
+            <P>Hi, my name is Artem Frenk. I am a Rising Junior at Worcester Polytechnic Institute in Worcester, MA. I major in Data Science, with a focus in Machine Learning and NLP. Below, you can find
+                some projects I have done, technologies (packages, frameworks, languages, etc.) that I am proficient in, and some of my experience. 
+            </p>
         </div>
         <div class="section" id="experience">
             <h2>Experience</h2>
