--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             My LinkedIn
         </a>
         <a href="mailto:afrenk.biz@gmail.com" class="link">
-            <img src = "https://commons.wikimedia.org/wiki/File:Gmail_icon_(2020).svg" alt = "gmail" class="icon">
+            <img src = "https://upload.wikimedia.org/wikipedia/commons/7/7e/Gmail_icon_%282020%29.svg" alt = "gmail" class="icon">
             Email Me
         </a>
     </div>
