added download link for resume, added 2 projects

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 				<!-- Two -->
 					<section id="two">
-						<h2>Projects</h2>
+						<h2>My Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<embed src="images/papers/LKT (1).pdf" width="350" height="200"
@@ -43,9 +43,16 @@
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<embed src="images/papers/CS_548_Project_Template.pdf" width="350" height="200" type="application/pdf">
-								<h3>WikiArt Style Classification Project</h3>
+								<a href="https://github.com/afrenkai/KDDProject2">WikiArt Style Classification Project</a>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<img src="images/fulls/BWH.png" width="350" height="200", alt = "BWH Map Sample">
+								<a href="https://ec2-18-218-101-145.us-east-2.compute.amazonaws.com/home">Brigham and Women's Hospital Navigation Site</a>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<img src="images/fulls/NBALSTM.png" width="350" height="200", alt = "NBA LSTM">
 
-
+								<a href="https://github.com/afrenkai/NBARNN/blob/main/NBA_LSTM_RNN.ipynb">NBA Player Assist Prediction with LSTM</a>
 							</article>
 						</div>
 					</section>
@@ -379,6 +386,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						<li><a href="https://github.com/afrenkai" class="icon brands fa-github"><span class="label">Github</span></a></li>
 						<li><a href="https://www.linkedin.com/in/artem-frenk/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 						<li><a href="mailto: afrenk.biz@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="images/papers/Artem-Resume-Oct24.pdf" class="fa fa-download"><span class="label"></span></a></li>
 					</ul>
 					<ul class="copyright">
 						<li>&copy; Artem Frenk</li><li>
